--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,26 @@
   <name>task-manager Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <mysql.version>8.0.22</mysql.version>
-    <mybatis.version>3.4.6</mybatis.version>
+    <mybatis.version>3.5.3</mybatis.version>
+    <mybatis-spring.version>2.0.6</mybatis-spring.version>
     <log4j.version>1.2.16</log4j.version>
     <org.springframework.version>5.3.33</org.springframework.version>
     <junit.version>4.13.2</junit.version>
+    <com.alibaba.druid.version>1.2.6</com.alibaba.druid.version>
+    <jstl.version>1.2</jstl.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>${mybatis-spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mybatis</groupId>
@@ -62,6 +71,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>${org.springframework.version}</version>
     </dependency>
@@ -71,11 +85,28 @@
       <version>${org.springframework.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${org.springframework.version}</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>${com.alibaba.druid.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>${jstl.version}</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>task-manager</finalName>
