--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <com.alibaba.druid.version>1.2.6</com.alibaba.druid.version>
     <jstl.version>1.2</jstl.version>
     <org.hibernate.validator.verison>6.2.5.Final</org.hibernate.validator.verison>
+    <java.servlet.version>3.1.0</java.servlet.version>
   </properties>
   <dependencies>
     <dependency>
@@ -111,6 +112,13 @@
       <artifactId>hibernate-validator</artifactId>
       <version>${org.hibernate.validator.verison}</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${java.servlet.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>task-manager</finalName>
